# sdm2

./: CMakeLists.txt  README.md
src/: README.md  test_model.cpp  train_model.cpp
src/include/: ldmarkmodel.cpp
